--- a/app/assets/stylesheets/questions.scss
+++ b/app/assets/stylesheets/questions.scss
@@ -10,47 +10,59 @@ h1 {
   font-weight: lighter;
 }
 
-form {
-  // background-color: blue;
-  height: 50px;
-  padding-right: 100px;
-}
 
-input {
-  padding: 12px;
+.input-group {
 }
+// form {
+//   // background-color: blue;
+//   height: 50px;
+//   padding-right: 100px;
+// }
 
-input[type=text] {
-  // background-color: red;
-  width: 80%;
-  margin: 0;
-  border-bottom-left-radius: 4px;
-  border-top-left-radius: 4px;
+// input {
+//   padding: 12px;
+// }
 
-}
+// input[type=text] {
+//   // background-color: red;
+//   width: 80%;
+//   margin: 0;
+//   border-bottom-left-radius: 4px;
+//   border-top-left-radius: 4px;
 
-input[type=submit] {
-  // background-color: red;
-  position: absolute;
-  width: 10%;
-  margin: 0;
-  background-color: #285aaf;
-  color: white;
-  border-bottom-right-radius: 4px;
-  border-top-right-radius: 4px;
-}
+// }
+
+// input[type=submit] {
+//   // background-color: red;
+//   position: absolute;
+//   width: 10%;
+//   margin: 0;
+//   background-color: #285aaf;
+//   color: white;
+//   border-bottom-right-radius: 4px;
+//   border-top-right-radius: 4px;
+// }
 
 // answer page
 
 .answer {
   font-size: 20px;
   padding-left: 10px;
-  border-left: solid grey 6px;
+  border-left: solid rgba(100, 100, 100, 0.3) 6px;
   margin-right: 100px;
+  margin-top: 24px;
+}
+
+.answer p:first-child {
+  padding-top: 12px;
+}
+
+.answer p:last-child {
+  padding-bottom: 12px;
 }
 
 #coach {
-  background-color: rgba(247, 228, 158, 0.5);
+  background-color: rgba(247, 228, 158, 0.2);
 }
 
 a {
